<resources>
    <string name="app_name">LocationApp</string>
    <string name="add_location">Add Location</string>
    <string name="view_locations">View Locations</string>
    <string name="btn_submit">Submit</string>

    <string name="hint_location_name">Enter location name</string>
    <string name="hint_country">Enter country</string>
    <string name="hint_gps">Enter GPS coordinates</string>
    <string name="hint_date">DD-MM-YYYY</string>
    <string name="hint_rating">Enter rating (1-/10)</string>
    <string name="gps_date_rating">GPS, Date, Rating</string>
    <string name="btn_get_current_gps">Get Current GPS</string>
    <string name="label_location_name">Location Name</string>
    <string name="label_country">Country</string>
    <string name="label_date_visited">Date Visited</string>
    <string name="label_rating">Rating</string>
    <string name="more_options">More options</string>
    <string name="sort_by">Sort By</string>
    <string name="locator_app_logo">Locator App Logo</string>
    <string name="location_name">Location Name</string>
    <string name="country">Country</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="date_visited">Date Visited</string>
    <string name="rating">Rating</string>
    <string name="enter_rating_1_10">Enter rating (1-10)</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_gps_coordinates">Enter GPS coordinates</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="enter_country">Enter country</string>
    <string name="get_current_gps">Get Current GPS</string>
    <string-array name="sort_options">
        <item>Name</item>
        <item>Rating</item>
        <item>Date</item>
    </string-array>

</resources>